--- a/web250/brand.html
+++ b/web250/brand.html
@@ -24,6 +24,32 @@
             <p>Step into The Wyvern’s Hoard and let your imagination soar amidst our collection of enchanting wonders.
             </p>
             <p id="tagline">The Wyvern’s Hoard: A Shop of Wonders and Enchanted Curiosities</p>
+
+            <h3>Colors</h3>
+            <ul id="brandColors">
+                <li>
+                    <p>#BCD5AF<br>Background</p>
+                </li>
+                <li class="lightText">
+                    <p>#38940A<br>Links</p>
+                </li>
+                <li class="lightText">
+                    <p>#764382<br>Links Hover</p>
+                </li>
+                <li class="lightText">
+                    <p>#321B2A<br>Body Text</p>
+                </li>
+            </ul>
+
+            <h3>Fonts</h3>
+            <div id="garamond">
+                <h4>Garamond - H1</h4>
+                <p>Aa Bb Cc Dd Ee Ff Gg Hh Ii Jj Kk Ll Mm Nn Oo Pp Qq Rr Ss Tt Uu Vv Ww Xx Yy Zz</p>
+            </div>
+            <div id="georgia">
+                <h4>Georgia - Other Text</h4>
+                <p>Aa Bb Cc Dd Ee Ff Gg Hh Ii Jj Kk Ll Mm Nn Oo Pp Qq Rr Ss Tt Uu Vv Ww Xx Yy Zz</p>
+            </div>
         </div>
         <hr>
     </main>
