--- a/web250/introduction.html
+++ b/web250/introduction.html
@@ -33,7 +33,8 @@
             </li>
             <li>
                 <p>Courses I'm in & Why: I'm taking these courses as alternative options for my degree, I'm still
-                    excited to learn from both of them!
+                    excited to learn from both of them!</p>
+                <p>
                 <ul>
                     <li>WEB-250 - Database Driven Website</li>
                     <li>CSC-221 - Advanced Python Programming</li>
