Updated Validation method
Updated Validation method:
- Fixed errors and warnings from new validation method

--- a/web250/index.html
+++ b/web250/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="widthdevice-width, initial-scale=1.0">
     <title>Gina W's Grim Wyvern | WEB250 | Home</title>
     <link rel="stylesheet" href="styles/default.css">
+    <script src="https://lint.page/kit/880bd5.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
