--- a/web250/introduction.html
+++ b/web250/introduction.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="widthdevice-width, initial-scale=1.0">
     <title>Gina W's Grim Wyvern | WEB250 | Introduction</title>
     <link rel="stylesheet" href="styles/default.css">
+    <script src="https://lint.page/kit/880bd5.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -32,7 +33,7 @@
                 <p>Primary Computer Platform: Windows</p>
             </li>
             <li>
-                <p>Courses I'm in & Why: I'm taking these courses as alternative options for my degree, I'm still
+                <p>Courses I'm in &amp; Why: I'm taking these courses as alternative options for my degree, I'm still
                     excited to learn from both of them!</p>
                 <ul>
                     <li>WEB-250 - Database Driven Website</li>
