--- a/web250/brand.html
+++ b/web250/brand.html
@@ -6,10 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gina W's Gawky Wraith | WEB215 | Brand Guide</title>
     <link rel="stylesheet" href="styles/default.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Junge&display=swap" rel="stylesheet">
-
+    <script src="https://lint.page/kit/880bd5.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -26,17 +23,17 @@
             <p id="tagline">The Wyvern’s Hoard: A Shop of Wonders and Enchanted Curiosities</p>
 
             <h3>Colors</h3>
-            <ul id="brandColors">
+            <ul id="brand-colors">
                 <li>
                     <p>#BCD5AF<br>Background</p>
                 </li>
-                <li class="lightText">
+                <li class="light-text">
                     <p>#38940A<br>Links</p>
                 </li>
-                <li class="lightText">
+                <li class="light-text">
                     <p>#764382<br>Links Hover</p>
                 </li>
-                <li class="lightText">
+                <li class="light-text">
                     <p>#321B2A<br>Body Text</p>
                 </li>
             </ul>
