Updates for introduction.html
Updates for introduction.html
- Course names reformatted (example:
web-250 is now WEB250)
- Updated reasons for taking courses
- G & H in GitHub now capitalized
- Removed extra A in Codecademy
- Updated JSFiddle link
- In background in this subject: Removed dashes in course names (example:
web-250 is now WEB250)
- Added professional background

--- a/web250/introduction.html
+++ b/web250/introduction.html
@@ -14,20 +14,23 @@
     <main class="container">
         <h2>Introduction</h2>
         <figure>
-            <img src="images/small_gatthewaterfall.jpg" alt="g at a waterfall">
+            <img src="./images/small_gatthewaterfall.jpg" alt="g at a waterfall">
             <figcaption>Avoiding the camera at a waterfall</figcaption>
         </figure>
 
         <ul>
             <li>
-                <p>Personal background: Born in NC</p>
+                <p>Personal background: Born in NC.</p>
+            </li>
+            <li>
+                <p>Professional Background: Former retail employee.</p>
             </li>
             <li>
                 <p>Academic Background: Currently working towards finishing my degree in Full Stack Programming.
                 </p>
             </li>
             <li>
-                <p>Background in this Subject: I have taken the intro WEB-110 class, as well as WEB-115 and WEB-250.</p>
+                <p>Background in this Subject: I have taken the intro WEB110 class, as well as WEB115 and WEB250.</p>
             </li>
             <li>
                 <p>Primary Computer Platform: Windows</p>
@@ -36,8 +39,8 @@
                 <p>Courses I'm in &amp; Why: I'm taking these courses as alternative options for my degree, I'm still
                     excited to learn from both of them!</p>
                 <ul>
-                    <li>WEB-250 - Database Driven Website</li>
-                    <li>CSC-221 - Advanced Python Programming</li>
+                    <li><b>WEB250 - Database Driven Website</b>: alternative option for my degree</li>
+                    <li><b>CSC221 - Advanced Python Programming</b>: alternative option for my degree</li>
                 </ul>
             </li>
             <li>
