--- a/web250/introduction.html
+++ b/web250/introduction.html
@@ -39,7 +39,7 @@
                 <p>Courses I'm in &amp; Why: I'm taking these courses as alternative options for my degree, I'm still
                     excited to learn from both of them!</p>
                 <ul>
-                    <li><b>WEB250 - Database Driven Website</b>: alternative option for my degree</li>
+                    <li><b>WEB250 - Database Driven Websites</b>: alternative option for my degree</li>
                     <li><b>CSC221 - Advanced Python Programming</b>: alternative option for my degree</li>
                 </ul>
             </li>
