Added Super Duper Paratrooper
Added Super Duper Paratrooper to github.io as well as to infinity free hosted site.

--- a/web250/index.html
+++ b/web250/index.html
@@ -18,7 +18,10 @@
         <p>You can explore my work from the navigation bar above, or jump right to my introduction by <a
                 href="introduction.html">clicking this
                 link</a></p>
-        <p></p>
+        <p>Super Duper Paratrooper - <a href="/multipage_sites/multipage_sites/superduper_static/index.htm"
+                target="_blank">Static Page</a></p>
+        <p>Super Duper Paratrooper - <a href="/multipage_sites/multipage_sites/superduper_php/index.php"
+                target="_blank">PHP Page</a></p>
         <hr>
     </main>
     <div data-include="components/footer.html"></div>
