Changed Index Title, Created archive, Removed Brand Rectangle
- Changed Index Title: old_index reverted to index

- Links to old_index also reverted in all files

- Archive created: Archive created and contains WEB250.io Original Version. This is the git version of the site before the multipage sites assignment and php files were added

- Removed Brand colored rectangle div and it's css

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
             <h3>Web250:</h3>
             <ul>
-                <li><a href="web250/old_index.html">Index - Web250</a></li>
+                <li><a href="web250/index.html">Index - Web250</a></li>
             </ul>
         </nav>
     </main>
