Cleanup: HTML, CSS updates & favicon addition
- Removed p's fro li elements in introduction.html

- Removed container class from main, adjusted css for main

- Added favicon to tab

- Adjusted spacing between logo and h1 in all headers

- Began working on php changes

- Fixed Accumulus errors: BG and Link colors adjusted for better contrast, alt text added to images where missing

--- a/web250/brand.html
+++ b/web250/brand.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gina W's Gawky Wraith | WEB250 | Brand Guide</title>
     <link rel="stylesheet" href="styles/default.css">
+    <link rel="icon" href="images/favicon1.ico" type="image/x-icon">
     <script src="https://lint.page/kit/880bd5.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <div data-include="components/header.html"></div>
-    <main class="container">
+    <main>
         <h2>The Wyvern’s Hoard - Brand Guide</h2>
         <div>
             <p>The Wyvern’s Hoard invites fantasy enthusiasts and curious seekers to explore a realm filled with magical
@@ -25,10 +26,10 @@
             <h3>Colors</h3>
             <ul id="brand-colors">
                 <li>
-                    <p>#BCD5AF<br>Background</p>
+                    <p>#DEF2D4<br>Background</p>
                 </li>
                 <li class="light-text">
-                    <p>#38940A<br>Links</p>
+                    <p>#1C5502<br>Links</p>
                 </li>
                 <li class="light-text">
                     <p>#764382<br>Links Hover</p>
