--- a/web250/contract.html
+++ b/web250/contract.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="widthdevice-width, initial-scale=1.0">
     <title>Gina W's Grim Wyvern | WEB250 | Course Contract</title>
     <link rel="stylesheet" href="styles/default.css">
+    <link rel="icon" href="images/favicon1.ico" type="image/x-icon">
     <script src="https://lint.page/kit/880bd5.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <div data-include="components/header.html"></div>
-    <main class="container">
+    <main>
         <h2>Contract</h2>
 
         <p>I, <a href="introduction.html">Gina M. Whitley</a> agree to abide by the terms of the course contract in my
