--- a/web250/introduction.html
+++ b/web250/introduction.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="widthdevice-width, initial-scale=1.0">
     <title>Gina W's Grim Wyvern | WEB250 | Introduction</title>
     <link rel="stylesheet" href="styles/default.css">
+    <link rel="icon" href="images/favicon1.ico" type="image/x-icon">
     <script src="https://lint.page/kit/880bd5.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <div data-include="components/header.html"></div>
-    <main class="container">
+    <main>
         <h2>Introduction</h2>
         <figure>
             <img src="./images/small_gatthewaterfall.jpg" alt="g at a waterfall">
@@ -20,33 +21,33 @@
 
         <ul>
             <li>
-                <p>Personal background: Born in NC.</p>
+                Personal background: Born in NC.
             </li>
             <li>
-                <p>Professional Background: Former retail employee.</p>
+                Professional Background: Former retail employee.
             </li>
             <li>
-                <p>Academic Background: Currently working towards finishing my degree in Full Stack Programming.
-                </p>
+                Academic Background: Currently working towards finishing my degree in Full Stack Programming.
+
             </li>
             <li>
-                <p>Background in this Subject: I have taken the intro WEB110 class, as well as WEB115 and WEB250.</p>
+                Background in this Subject: I have taken the intro WEB110 class, as well as WEB115 and WEB250.
             </li>
             <li>
-                <p>Primary Computer Platform: Windows</p>
+                Primary Computer Platform: Windows
             </li>
             <li>
-                <p>Courses I'm in &amp; Why: I'm taking these courses as alternative options for my degree, I'm still
-                    excited to learn from both of them!</p>
+                Courses I'm in &amp; Why: I'm taking these courses as alternative options for my degree, I'm still
+                excited to learn from both of them!
                 <ul>
                     <li><b>WEB250 - Database Driven Websites</b>: alternative option for my degree</li>
                     <li><b>CSC221 - Advanced Python Programming</b>: alternative option for my degree</li>
                 </ul>
             </li>
             <li>
-                <p>Funny/Interesting Item about Yourself: I enjoy all types of fantasy world-building and storytelling.
-                    I also
-                    really enjoy crafting and DIY projects.</p>
+                Funny/Interesting Item about Yourself: I enjoy all types of fantasy world-building and storytelling.
+                I also
+                really enjoy crafting and DIY projects.
             </li>
         </ul>
         <hr>
