--- a/web250/brand.html
+++ b/web250/brand.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gina W's Gawky Wraith | WEB250 | Brand Guide</title>
+    <title>Gina W's Gawky Wraith | Brand Guide</title>
     <link rel="stylesheet" href="styles/default.css">
     <link rel="icon" href="images/favicon1.ico" type="image/x-icon">
     <script src="https://lint.page/kit/880bd5.js" crossorigin="anonymous"></script>
