--- a/web250/introductionform.html
+++ b/web250/introductionform.html
@@ -72,8 +72,7 @@
             value="I enjoy all types of fantasy world-building and storytelling. I also really enjoy crafting and DIY projects."><br><br>
     
           <label>Courses I'm in &amp; Why:</label><br>
-          <textarea id="courses" name="courses" rows="3" cols="40">
-    I'm taking these courses as alternative options for my degree, I'm still excited to learn from both of them!</textarea
+          <textarea id="courses" name="courses" rows="3" cols="40">I'm taking these courses as alternative options for my degree, I'm still excited to learn from both of them!</textarea
           ><br><br>
     
           <label>Course List:</label>
